Fixed spacing on widgets

--- a/app/assets/stylesheets/base/callout.scss
+++ b/app/assets/stylesheets/base/callout.scss
@@ -5,7 +5,6 @@ background-color: $cu-light-grey;
   vertical-align: top;
   padding: 20px;
   margin: 10px 10px 25px 10px;
-  width: 166px;
   position: relative;
   float: left;
 	.leftNav & {
